[package]
name = "particle_life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
rand = "0.8.5"
glutin = "0.30.3"
gl = "0.14.0"
winit = "0.27.5"
glutin-winit = "0.2.1"
thiserror = "1.0.38"
raw-window-handle = "0.5.0"
image = "0.24.5"
